--- a/main/html/index.html
+++ b/main/html/index.html
@@ -26,13 +26,20 @@
                     </select>
                 </div>
                 <div class="schedule_list">
+                    <h1 class="font_red">일</h1>
+                    <h1>월</h1>
+                    <h1>화</h1>
+                    <h1>수</h1>
+                    <h1>목</h1>
+                    <h1>금</h1>
+                    <h1 class="font_red">토</h1>
                     <!-- 동적으로 선택된 월 에 대한 달력 생성 -->
                 </div>           
             </div>
         </div>
         <div class="footer">
             <div class="container">
-                푸터
+                footer
             </div>
         </div>
     </div>
